# chip8_rust

./: .gitignore  Cargo.toml  LICENSE  chip8_rust_config.toml  readme.md
src/: emulator.rs  main.rs  readme.md  tests.rs
