[package]
name = "chip8_rust"
version = "1.0.1"
authors = ["Samuel Whiteley <sam@cosmicbagel.com>"]
edition = "2018"

[profile.release]
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
winit = "0.25.0"
pixels = "0.5.0"
toml = "0.5"
serde = "1.0.127"
serde_derive = "1.0.127"
kira = "0.5.3"